# recruitment-automation-system-ui/src/openapi/openapi.json
@@ -602,6 +602,66 @@
         }
       }
     },
+    "/jobs/searchcandidate": {
+      "get": {
+        "tags": [
+          "JobListing"
+        ],
+        "operationId": "searchJobsForCandidate",
+        "parameters": [
+          {
+            "name": "title",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "default": ""
+            }
+          },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10
+            }
+          },
+          {
+            "name": "sort",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "string",
+              "default": "newest"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PageResponseJobListingResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
     "/jobs/search": {
       "get": {
         "tags": [
@@ -678,6 +738,48 @@
               "format": "int32"
             }
           },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PageResponseJobListingResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/jobs/find/allforCondidate": {
+      "get": {
+        "tags": [
+          "JobListing"
+        ],
+        "operationId": "findAllJobsforCondidate",
+        "parameters": [
           {
             "name": "page",
             "in": "query",
@@ -911,6 +1013,48 @@
               "format": "int32"
             }
           },
+          {
+            "name": "page",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 0
+            }
+          },
+          {
+            "name": "size",
+            "in": "query",
+            "required": false,
+            "schema": {
+              "type": "integer",
+              "format": "int32",
+              "default": 10
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/PageResponseApplicationResponse"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/app/find/allforRecruiter": {
+      "get": {
+        "tags": [
+          "application"
+        ],
+        "operationId": "findAllApplicationforRecruiter",
+        "parameters": [
           {
             "name": "page",
             "in": "query",
