# recruitment-automation-system/src/main/java/com/RAS/recruitment_automation_system/application/ApplicationController.java
@@ -8,6 +8,7 @@ import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Map;
@@ -23,9 +24,11 @@ public class ApplicationController {
     @PostMapping("/create/{jobId}")
     public ResponseEntity<Integer> createApplication(
             @PathVariable Integer jobId,
-            @Valid @RequestBody ApplicationRequest request) {
+            @Valid @RequestBody ApplicationRequest request,
+            Authentication connectedUser
+    ) {
 
-        return ResponseEntity.ok(applicationService.createApplication(jobId, request));
+        return ResponseEntity.ok(applicationService.createApplication(jobId, request, connectedUser));
     }
 
 
@@ -33,17 +36,29 @@ public class ApplicationController {
     @GetMapping("/find/all")
     public ResponseEntity<PageResponse<ApplicationResponse>> findAllApplication(
             @RequestParam(name = "page", defaultValue = "0", required = false) int page,
-            @RequestParam(name = "size", defaultValue = "10", required = false) int size
+            @RequestParam(name = "size", defaultValue = "10", required = false) int size,
+            Authentication connectedUser
     ) {
-        return ResponseEntity.ok(applicationService.findAllApplication(page, size));
+        return ResponseEntity.ok(applicationService.findAllApplication(page, size, connectedUser));
     }
+    @GetMapping("/find/allforRecruiter")
+    public ResponseEntity<PageResponse<ApplicationResponse>> findAllApplicationforRecruiter(
+            @RequestParam(name = "page", defaultValue = "0", required = false) int page,
+            @RequestParam(name = "size", defaultValue = "10", required = false) int size,
+            Authentication connectedUser
+    ) {
+        return ResponseEntity.ok(applicationService.findAllApplicationforRecruiter(page, size, connectedUser));
+    }
+
     @GetMapping("/find/{appId}")
     public ResponseEntity<PageResponse<ApplicationResponse>> findApplicationById(
             @PathVariable("appId") Integer appId,
             @RequestParam(name = "page", defaultValue = "0", required = false) int page,
-            @RequestParam(name = "size", defaultValue = "10", required = false) int size)
+            @RequestParam(name = "size", defaultValue = "10", required = false) int size,
+            Authentication connectedUser
+    )
     {
-        PageResponse<ApplicationResponse> response = applicationService.findApplicationById(appId, page, size);
+        PageResponse<ApplicationResponse> response = applicationService.findApplicationById(appId, page, size, connectedUser);
 
         if (response.getContent().isEmpty()) {
             return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
@@ -54,9 +69,9 @@ public class ApplicationController {
     @PatchMapping("/update/{appId}")
     public ResponseEntity<Void> updateApplicationById(
             @PathVariable("appId") Integer appId,
-            @Valid @RequestBody ApplicationRequest request
+            @Valid @RequestBody ApplicationRequest request, Authentication connectedUser
     ) {
-        applicationService.updateApplicationById(appId, request);
+        applicationService.updateApplicationById(appId, request, connectedUser);
         return ResponseEntity.noContent().build();
     }
     @DeleteMapping("/delete/{appId}")
@@ -76,8 +91,8 @@ public class ApplicationController {
     }
 
     @GetMapping("/status-stats")
-    public ResponseEntity<Map<String, Long>> getStatusStats() {
-        Map<String, Long> stats = applicationService.getStatusCounts();
+    public ResponseEntity<Map<String, Long>> getStatusStats(Authentication connectedUser) {
+        Map<String, Long> stats = applicationService.getStatusCounts(connectedUser);
         return ResponseEntity.ok(stats);
     }
 
