# recruitment-automation-system/src/main/java/com/RAS/recruitment_automation_system/joblisting/JobListingController.java
@@ -6,6 +6,7 @@ import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.*;
 
 import java.sql.Date;
@@ -23,24 +24,37 @@ public class JobListingController {
     private final JobListingService service;
     @PostMapping("/create")
     public ResponseEntity<Integer> createJobListing(
-            @Valid @RequestBody JobListingRequest request
+            @Valid @RequestBody JobListingRequest request,
+            Authentication connectedUser
     ) {
-        return ResponseEntity.ok(service.createJobListing(request));
+        return ResponseEntity.ok(service.createJobListing(request, connectedUser));
     }
     @GetMapping("/find/all")
     public ResponseEntity<PageResponse<JobListingResponse>> findAllJobs(
             @RequestParam(name = "page", defaultValue = "0", required = false) int page,
+            @RequestParam(name = "size", defaultValue = "10", required = false) int size,
+            Authentication connectedUser
+    ) {
+        return ResponseEntity.ok(service.findAllJobs(page, size , connectedUser));
+    }
+    @GetMapping("/find/allforCondidate")
+    public ResponseEntity<PageResponse<JobListingResponse>> findAllJobsforCondidate(
+            @RequestParam(name = "page", defaultValue = "0", required = false) int page,
             @RequestParam(name = "size", defaultValue = "10", required = false) int size
     ) {
-        return ResponseEntity.ok(service.findAllJobs(page, size));
+        return ResponseEntity.ok(service.findAllJobsforCondidate(page, size ));
     }
+
+
     @GetMapping("/find/{jobId}")
     public ResponseEntity<PageResponse<JobListingResponse>> findJobsById(
             @PathVariable("jobId") Integer jobId,
             @RequestParam(name = "page", defaultValue = "0", required = false) int page,
-            @RequestParam(name = "size", defaultValue = "10", required = false) int size)
+            @RequestParam(name = "size", defaultValue = "10", required = false) int size,
+            Authentication connectedUser
+    )
     {
-        PageResponse<JobListingResponse> response = service.findJobsById(jobId, page, size);
+        PageResponse<JobListingResponse> response = service.findJobsById(jobId, page, size, connectedUser);
 
         if (response.getContent().isEmpty()) {
             return ResponseEntity.status(HttpStatus.NO_CONTENT).build();
@@ -51,9 +65,10 @@ public class JobListingController {
     @PatchMapping("/update/{jobId}")
     public ResponseEntity<Void> updateJobListingById(
             @PathVariable("jobId") Integer jobId,
-            @Valid @RequestBody JobListingRequest request
+            @Valid @RequestBody JobListingRequest request,
+            Authentication connectedUser
     ) {
-        service.updateJobListingById(jobId, request);
+        service.updateJobListingById(jobId, request, connectedUser);
         return ResponseEntity.noContent().build();
     }
     @DeleteMapping("/delete/{jobId}")
@@ -70,18 +85,26 @@ public class JobListingController {
             @RequestParam(name = "title", defaultValue = "", required = false) String title,
             @RequestParam(name = "page", defaultValue = "0", required = false) int page,
             @RequestParam(name = "size", defaultValue = "10", required = false) int size,
+            @RequestParam(name = "sort", defaultValue = "newest", required = false) String sort,
+            Authentication connectedUser) {
+        return ResponseEntity.ok(service.searchJobsByTitle(title, page, size, sort, connectedUser));
+    }
+    @GetMapping("/searchcandidate")
+    public ResponseEntity<PageResponse<JobListingResponse>> searchJobsForCandidate(
+            @RequestParam(name = "title", defaultValue = "", required = false) String title,
+            @RequestParam(name = "page", defaultValue = "0", required = false) int page,
+            @RequestParam(name = "size", defaultValue = "10", required = false) int size,
             @RequestParam(name = "sort", defaultValue = "newest", required = false) String sort) {
-        return ResponseEntity.ok(service.searchJobsByTitle(title, page, size, sort));
+        return ResponseEntity.ok(service.searchJobsForCandidate(title, page, size, sort));
     }
     @GetMapping("/statistics")
-    public ResponseEntity<Map<String, Long>> getJobStatisticsByDate() {
-        Map<Date, Long> statistics = service.getJobStatisticsByDate();
+    public ResponseEntity<Map<String, Long>> getJobStatisticsByDate(Authentication connectedUser) {
 
-
+        Map<Date, Long> statistics = service.getJobStatisticsByDate(connectedUser);
         SimpleDateFormat sdf = new SimpleDateFormat("yyyy-MM-dd");
         Map<String, Long> result = statistics.entrySet().stream()
                 .collect(Collectors.toMap(
-                        entry -> sdf.format(entry.getKey()), // Convertir Date en String
+                        entry -> sdf.format(entry.getKey()),
                         Map.Entry::getValue
                 ));
         return ResponseEntity.ok(result);
